attached_assets/Pasted-env-load-env-production-env-env-export-EXPO-PUBLIC-STRAVA-CLIENT-ID-EXPO-PUBLIC-STRAVA-CLIENT-SE-1753794538256_1753794538256.txt
env: load .env.production .env
env: export EXPO_PUBLIC_STRAVA_CLIENT_ID EXPO_PUBLIC_STRAVA_CLIENT_SECRET EXPO_PUBLIC_STRIPE_PUBLISHABLE_KEY EXPO_PUBLIC_EMAILJS_SERVICE_ID EXPO_PUBLIC_EMAILJS_TEMPLATE_ID EXPO_PUBLIC_EMAILJS_PUBLIC_KEY EXPO_PUBLIC_API_URL EXPO_PUBLIC_VPS_URL EXPO_PUBLIC_DEV_SERVER_URL
Starting Metro Bundler
iOS node_modules/expo-router/entry.js ▓▓▓▓▓▓░░░░░░░░░░ 43.2% (415/637)
iOS node_modules/expo-router/entry.js ▓▓▓▓▓▓▓▓▓▓▓▓░░░░ 77.9% (1234/1398)
iOS Bundling failed 6726ms node_modules/expo-router/entry.js (1606 modules)
SyntaxError: /Users/expo/workingdir/build/components/AuthGuard.tsx: 'import' and 'export' may only appear at the top level. (13:2)
  11 |   const segments = useSegments();
  12 |   const router = useRouter();
> 13 |   import AsyncStorage from '@react-native-async-storage/async-storage';
     |   ^
  14 |
  15 |   React.useEffect(() => {
  16 |     // Ne pas rediriger pendant le chargement
SyntaxError: SyntaxError: /Users/expo/workingdir/build/components/AuthGuard.tsx: 'import' and 'export' may only appear at the top level. (13:2)
  11 |   const segments = useSegments();
  12 |   const router = useRouter();
> 13 |   import AsyncStorage from '@react-native-async-storage/async-storage';
     |   ^
  14 |
  15 |   React.useEffect(() => {
  16 |     // Ne pas rediriger pendant le chargement
SyntaxError: /Users/expo/workingdir/build/components/AuthGuard.tsx: 'import' and 'export' may only appear at the top level. (13:2)
  11 |   const segments = useSegments();
  12 |   const router = useRouter();
> 13 |   import AsyncStorage from '@react-native-async-storage/async-storage';
     |   ^
  14 |
  15 |   React.useEffect(() => {
  16 |     // Ne pas rediriger pendant le chargement
    at constructor (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:367:19)
    at TypeScriptParserMixin.raise (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:6627:19)
    at TypeScriptParserMixin.parseStatementContent (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:12871:18)
    at TypeScriptParserMixin.parseStatementContent (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:9527:18)
    at TypeScriptParserMixin.parseStatementLike (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:12767:17)
    at TypeScriptParserMixin.parseStatementListItem (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:12747:17)
    at TypeScriptParserMixin.parseBlockOrModuleBlockBody (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:13316:61)
    at TypeScriptParserMixin.parseBlockBody (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:13309:10)
    at TypeScriptParserMixin.parseBlock (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:13297:10)
    at TypeScriptParserMixin.parseFunctionBody (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:12101:24)
    at TypeScriptParserMixin.parseFunctionBodyAndFinish (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:12087:10)
    at TypeScriptParserMixin.parseFunctionBodyAndFinish (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:9248:18)
    at /Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:13445:12
    at TypeScriptParserMixin.withSmartMixTopicForbiddingContext (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:12404:14)
    at TypeScriptParserMixin.parseFunction (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:13444:10)
    at TypeScriptParserMixin.parseExportDefaultExpression (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:13907:19)
    at TypeScriptParserMixin.parseExportDefaultExpression (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:9487:18)
    at TypeScriptParserMixin.parseExport (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:13828:25)
    at TypeScriptParserMixin.parseExport (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:9470:20)
    at TypeScriptParserMixin.parseStatementContent (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:12878:27)
    at TypeScriptParserMixin.parseStatementContent (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:9527:18)
    at TypeScriptParserMixin.parseStatementLike (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:12767:17)
    at TypeScriptParserMixin.parseModuleItem (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:12744:17)
    at TypeScriptParserMixin.parseBlockOrModuleBlockBody (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:13316:36)
    at TypeScriptParserMixin.parseBlockBody (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:13309:10)
    at TypeScriptParserMixin.parseProgram (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:12625:10)
    at TypeScriptParserMixin.parseTopLevel (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:12615:25)
    at TypeScriptParserMixin.parse (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:14492:10)
    at TypeScriptParserMixin.parse (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:10144:18)
    at parse (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:14505:26)
    at parser (/Users/expo/workingdir/build/node_modules/@babel/core/lib/parser/index.js:41:34)
    at parser.next (<anonymous>)
    at normalizeFile (/Users/expo/workingdir/build/node_modules/@babel/core/lib/transformation/normalize-file.js:64:37)
    at normalizeFile.next (<anonymous>)
    at run (/Users/expo/workingdir/build/node_modules/@babel/core/lib/transformation/index.js:22:50)
    at run.next (<anonymous>)
    at transform (/Users/expo/workingdir/build/node_modules/@babel/core/lib/transform.js:22:33)
    at transform.next (<anonymous>)
    at evaluateSync (/Users/expo/workingdir/build/node_modules/gensync/index.js:251:28)
    at sync (/Users/expo/workingdir/build/node_modules/gensync/index.js:89:14)
    at stopHiding - secret - don't use this - v1 (/Users/expo/workingdir/build/node_modules/@babel/core/lib/errors/rewrite-stack-trace.js:47:12)
    at Object.transformSync (/Users/expo/workingdir/build/node_modules/@babel/core/lib/transform.js:42:76)
    at parseWithBabel (/Users/expo/workingdir/build/node_modules/@expo/metro-config/build/transformSync.js:75:18)
    at transformSync (/Users/expo/workingdir/build/node_modules/@expo/metro-config/build/transformSync.js:54:16)
    at Object.transform (/Users/expo/workingdir/build/node_modules/@expo/metro-config/build/babel-transformer.js:118:58)
    at transformJSWithBabel (/Users/expo/workingdir/build/node_modules/@expo/metro-config/build/transform-worker/metro-transform-worker.js:470:47)
    at Object.transform (/Users/expo/workingdir/build/node_modules/@expo/metro-config/build/transform-worker/metro-transform-worker.js:585:12)
    at Object.transform (/Users/expo/workingdir/build/node_modules/@expo/metro-config/build/transform-worker/transform-worker.js:175:23)
    at transformFile (/Users/expo/workingdir/build/node_modules/metro/src/DeltaBundler/Worker.flow.js:57:36)
    at Object.transform (/Users/expo/workingdir/build/node_modules/metro/src/DeltaBundler/Worker.flow.js:33:10)
npx expo export:embed --eager --platform ios --dev false exited with non-zero code: 1